--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 models/variables/variables.data-00000-of-00001 filter=lfs diff=lfs merge=lfs -text
+models/variables/variables.index filter=lfs diff=lfs merge=lfs -text
+models/saved_model.pb filter=lfs diff=lfs merge=lfs -text
