--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,3 +1,24 @@
+# steps:
+# - name: 'gcr.io/cloud-builders/docker'
+#   args: ['build', '-t', 'gcr.io/$PROJECT_ID/imgwebapp:v1', '.']
+#   timeout: 180s
+# - name: 'gcr.io/cloud-builders/docker'
+#   args: ['push', 'gcr.io/$PROJECT_ID/imgwebapp:v1']
+# - name: 'gcr.io/cloud-builders/gcloud'
+#   entrypoint: "bash"
+#   args:
+#   - "-c"
+#   - |
+#     echo "Docker Container Built"
+#     ls -la
+#     ls -al models/
+# - name: "gcr.io/cloud-builders/gke-deploy"
+#   args:
+#   - run
+#   - --filename=k8s/
+#   - --location=us-central1
+#   - --cluster=cicd-cluster-1
+
 steps:
 - name: 'gcr.io/cloud-builders/docker'
   args: ['build', '-t', 'gcr.io/$PROJECT_ID/imgwebapp:v1', '.']
@@ -11,7 +32,7 @@ steps:
   - |
     echo "Docker Container Built"
     ls -la
-    ls -al models/
+    ls -al /app/models/
 - name: "gcr.io/cloud-builders/gke-deploy"
   args:
   - run
